[package]
name = "DebertaV2Model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }

candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-nn = { git= "https://github.com/huggingface/candle.git" }
candle-transformers = { git = "https://github.com/huggingface/candle.git"}

hf-hub = "0.3.0"
kdam = "0.5.1"
rand =  "*"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
tracing = "0.1.37"
tokenizers = { version = "0.15.2", features = ["onig"]  }