[package]
name = "deberta_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = "4.5.4"

candle-core = { git = "https://github.com/huggingface/candle.git", features = ["accelerate"]}
candle-nn = { git= "https://github.com/huggingface/candle.git", features = ["accelerate"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", features = ["accelerate"]}

hf-hub = "0.3.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
tracing = "0.1.37"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.7"
tokenizers = { version = "0.15.2", features = ["onig"]  }
